--- a/index.html
+++ b/index.html
@@ -5,8 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>P1 reader</title>
+
+    <style>
+        #P1 {color: #00FF00}
+        #P2 {color:#d6d610}
+        #P3 {color:purple}
+        #PT {color: #0b95d3}
+        #PTd3 { font-size: .6em}
+        #PTd2 { font-size: .6em}
+        #PTd1 { font-size: .6em}
+    </style>
+
 </head>
 <body>
+
 <script src="main.js"></script>
 
 <div>
@@ -22,19 +34,33 @@
 
 <br><h0>Wifi Ssid:<span id=WifiSSID></span></h0>
 <br><h0>Wifi Strength:<span id=WifiStrength>0</span>%</h0>
+<br><h0>Meter model:<span id=MM></span></h0>
+<br><h0>SMR version:<span id=SV></span></h0>
 
 <br><h1>Fase 1 (W):<span id=P1>0</span></h1>
 <h1>Fase 2 (W):<span id=P2>0</span></h1>
 <h1>Fase 3 (W):<span id=P3>0</span></h1>
-<h1>Totaal (W):<span id=PT>0</span></h1>
+<h1>Totaal (W):<span id=PT>0</span> <span id=PTd3>0</span> <span id=PTd2>0</span> <span id=PTd1>0</span></h1>
+
+<chart>
+    <canvas le width="700px" height="400px"></canvas>
+    <draw-canvas-data-set style='width: fit-content; height: fit-content; padding: 5px 15px; margin: 5px; position: absolute; left: 618px; top: 160px; opacity: 0; transition: all 0.5s ease 0s; color: rgb(255, 255, 255); background: rgb(3, 169, 244);'></draw-canvas-data-set>
+</chart>
 
 <br><h1>Export T1 (kWh) :<span id=ET1>0</span></h1>
 <h1>Export T2 (kWh) :<span id=ET2>0</span></h1>
 <h1>Import T1 (kWh) :<span id=IT1>0</span></h1>
 <h1>Import T2 (kWh) :<span id=IT2>0</span></h1>
 
-<br><h0>Gas Time :<span id=GTS>0</span></h0>
+<br><h0>Gas Time (hh:mm:ss/dd-mm-yy) :<span id=GTS>0</span></h0>
 <h1>Gas (m3) :<span id=G0>0</span></h1>
-    
+
+<br><h0>Active Water usage ( l/min ) :<span id=AL>0</span></h0>
+<h1>Total liters (m3) :<span id=TL>0</span></h1>
+
+
+
+
+
 </body>
 </html>
