--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
         #PTd3 { font-size: .6em}
         #PTd2 { font-size: .6em}
         #PTd1 { font-size: .6em}
+        #P1d3 { font-size: .6em}
+        #P1d2 { font-size: .6em}
+        #P1d1 { font-size: .6em}
+        #P2d3 { font-size: .6em}
+        #P2d2 { font-size: .6em}
+        #P2d1 { font-size: .6em}
+        #P3d3 { font-size: .6em}
+        #P3d2 { font-size: .6em}
+        #P3d1 { font-size: .6em}
     </style>
 
 </head>
@@ -37,9 +46,10 @@
 <br><h0>Meter model:<span id=MM></span></h0>
 <br><h0>SMR version:<span id=SV></span></h0>
 
-<br><h1>Fase 1 (W):<span id=P1>0</span></h1>
-<h1>Fase 2 (W):<span id=P2>0</span></h1>
-<h1>Fase 3 (W):<span id=P3>0</span></h1>
+<br>
+<h1>Fase 1 (W):<span id=P1>0</span> <span id=P1d3>0</span> <span id=P1d2>0</span> <span id=P1d1>0</span></h1>
+<h1>Fase 2 (W):<span id=P2>0</span> <span id=P2d3>0</span> <span id=P2d2>0</span> <span id=P2d1>0</span></h1>
+<h1>Fase 3 (W):<span id=P3>0</span> <span id=P3d3>0</span> <span id=P3d2>0</span> <span id=P3d1>0</span></h1>
 <h1>Totaal (W):<span id=PT>0</span> <span id=PTd3>0</span> <span id=PTd2>0</span> <span id=PTd1>0</span></h1>
 
 <chart>
