--- a/P1.html
+++ b/P1.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>P1 reader</title>
 
-
     <style>
-      #P1 {color: #00FF00}
-      #P2 {color:#d6d610}
-      #P3 {color:purple}
-      #PT {color: #0b95d3}
+        
+        #P1 {color: #00FF00}
+        #P2 {color:#d6d610}
+        #P3 {color:purple}
+        #PT {color: #0b95d3}
         #PTd3 { font-size: .6em}
         #PTd2 { font-size: .6em}
         #PTd1 { font-size: .6em}
@@ -24,14 +24,13 @@
         #P3d3 { font-size: .6em}
         #P3d2 { font-size: .6em}
         #P3d1 { font-size: .6em}
-  </style>
+    </style>
 
 </head>
 <body>
 
-
-
 <script>
+
 // Author: Edwin Glaser
 // --------  Only for private usage -----------
 // Date Nov. 2022
@@ -75,6 +74,8 @@ let un = 0
 let ys = 0;
 let dataT = [];
 
+const max_seconds = 600;
+
 
 let iteration = 0;
 
@@ -96,6 +97,45 @@ c = document.querySelector("canvas[le]");
  h = c.height;
  w = c.width ;
 ctx = c.getContext('2d');
+
+
+c.onmousemove = function(e){
+
+    $('draw-canvas-data-set').style.opacity = "0"
+
+    for(let data of dataT){
+        for (const [key, value] of Object.entries(data)) {
+            let dataG = value.split(","),
+            lx = e.layerX - 10,
+            ly = e.layerY - c.height + 25,
+            dx = dataG[1],
+            dy = dataG[0];
+            if (range(dx-10,Math.floor(dx)+10).includes(lx)){
+                //  console.log(dx, 'X includes', lx);
+            } 
+            if(range(dy-10,Math.floor(dy)+10).includes(ly)){
+                // console.log(dy, 'Y includes', ly);
+            }
+           
+                if (range(dx-10,Math.floor(dx)+10).includes(lx) && range(dy-10,Math.floor(dy)+10).includes(ly)) {
+                    // console.log(lx,ly,dx,dy, dataG[2]);
+                    // $('draw-canvas-data-set').innerHTML = dataG[2] + ':' + 'dx' + dataG[1] + 'dy' + dataG[0] + 'lx' +lx + 'ly' + ly;
+                    $('draw-canvas-data-set').innerHTML = dataG[3] + ':' + dataG[2]
+                    $('draw-canvas-data-set').style.opacity = "1"
+                    $('draw-canvas-data-set').style.left = e.clientX + "px"
+                    $('draw-canvas-data-set').style.top = e.clientY + "px"
+                }else{ 
+                // if (!range(dx-10,Math.floor(dx)+10).includes(lx) && !range(dy-10,Math.floor(dy)+10).includes(ly)) {
+                    // $('draw-canvas-data-set').style.opacity = "0.3"
+                    // console.log(lx,ly,dx,dy, dataG);
+                }
+                lx = lx -1
+                dx = dx -1
+        }
+    }
+}
+
+
 Init();
 
     document.getElementById('IP').value = '192.168.2.45';
@@ -131,7 +171,7 @@ function drawLine(){
     chart.digram()
     chart.data();
     chart.draw();
-    // chart.pointes();
+    chart.pointes();
     }
 
     return true;
@@ -241,7 +281,7 @@ async function meter(i){
         document.getElementById('AL').innerHTML =  document.getElementById('TL').innerHTML = '';
     }
 
-    return i == 300;
+    return i == max_seconds;
 
     } else {
       alert("HTTP-Error: " + response.status);
@@ -433,7 +473,7 @@ pointes: function() {
     line = 30
     start = 0;//30
     for (data of dataX) {
-        this.points(data, dataX)
+        this.points(data, dataX, 'Tot.')
     }
 
     ctx.fillStyle = "#00FF00" //green
@@ -442,7 +482,7 @@ pointes: function() {
     line = 30
     start = 0; //30
     for (data of datal1) {
-        this.points(data, datal1)
+        this.points(data, datal1, 'l1')
     }
 
     ctx.fillStyle = "#d6d610" //"#FFFF00" //yellow
@@ -451,7 +491,7 @@ pointes: function() {
     line = 30
     start = 0; //30
     for (data of datal2) {
-        this.points(data, datal2)
+        this.points(data, datal2, 'l2')
     }
 
     ctx.fillStyle = "#A020F0" // purple
@@ -460,13 +500,13 @@ pointes: function() {
     line = 30
     start = 0; //30
     for (data of datal3) {
-        this.points(data, datal3)
+        this.points(data, datal3 ,'l3')
     }
     ctx.fillStyle = "#00000F" 
 
     ctx.stroke()
 },
-points: function(d, dX){
+points: function(d, dX, f){
     // max = Math.max(...dX),
      // test = 30;
     // max = 1000; //test
@@ -481,12 +521,11 @@ while (max > d) {
 }
 // chart.circle(30 + y, test)
 chart.circle(y, test)
-dataT.push({ d : Math.round(test) + "," + Math.round(30 + y) +","+Math.round(d)})
-x = 30
+dataT.push({ d : Math.round(test) + "," + Math.round(y) +","+Math.round(d) +","+f})
+x = 0; //30
 y += ys
-
-
 },
+
  data: function() {
     y = 60
     x = 30
@@ -547,27 +586,6 @@ circle: function(x,y) {
 }
 }
 
-c.onmousemove = function(e){
-    for(let data of dataT){
-        for (const [key, value] of Object.entries(data)) {
-            let dataG = value.split(","),
-            lx = e.layerX,
-            ly = e.layerY,
-            dx = dataG[1],
-            dy = dataG[0]
-                if (range(dx-10,Math.floor(dx)+10).includes(lx) && range(dy-10,Math.floor(dy)+10).includes(ly)) {
-                    $('draw-canvas-data-set').innerHTML = dataG[2]
-                    $('draw-canvas-data-set').style.opacity = "1"
-                    $('draw-canvas-data-set').style.left = e.clientX + "px"
-                    $('draw-canvas-data-set').style.top = e.clientY + "px"
-                } if (range(dx-10,Math.floor(dx)+10).includes(lx) && !range(dy-10,Math.floor(dy)+10).includes(ly)) {
-                    $('draw-canvas-data-set').style.opacity = "0"
-                }
-                lx = lx -1
-                dx = dx -1
-        }
-    }
-}
 
 function range(start, end) {
     let range = [...Array(end + 1).keys()].filter(value => end >= value && start <= value );
@@ -578,7 +596,6 @@ function $(object){
 }
 
 //  -- - - - - - - - - - - - - - - - - - - - - - - - - - - 
-
 
 
 
@@ -608,7 +625,7 @@ function $(object){
 
 <chart>
     <canvas le width="700px" height="400px"></canvas>
-    <draw-canvas-data-set style='width: fit-content; height: fit-content; padding: 5px 15px; margin: 5px; position: absolute; left: 618px; top: 160px; opacity: 0; transition: all 0.5s ease 0s; color: rgb(255, 255, 255); background: rgb(3, 169, 244);'></draw-canvas-data-set>
+    <draw-canvas-data-set style='width: fit-content; height: fit-content; padding: 5px 15px; margin: 5px; position: absolute; left: 618px; top: 160px; opacity: 0; transition: all 0.5s ease 0s; color: rgb(255, 255, 255); background: rgb(141, 142, 143);'></draw-canvas-data-set>
 </chart>
 
 <br><h1>Export T1 (kWh) :<span id=ET1>0</span></h1>
