--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>P1 reader</title>
 
     <style>
+        
         #P1 {color: #00FF00}
         #P2 {color:#d6d610}
         #P3 {color:purple}
@@ -37,7 +38,9 @@
        minlength="7" maxlength="15" size="15" >
 
     
-        <input id="Scan" type="button" value = "Start" onclick="run()">
+        <input id="Start" type="button" value = "Start" onclick="run()">
+        <input id="Stop" type="button" value = "Stop"  onclick="stop()">
+
       </div>
 
 
@@ -53,19 +56,30 @@
 <h1>Totaal (W):<span id=PT>0</span> <span id=PTd3>0</span> <span id=PTd2>0</span> <span id=PTd1>0</span></h1>
 
 <chart>
-    <canvas le width="700px" height="400px"></canvas>
-    <draw-canvas-data-set style='width: fit-content; height: fit-content; padding: 5px 15px; margin: 5px; position: absolute; left: 618px; top: 160px; opacity: 0; transition: all 0.5s ease 0s; color: rgb(255, 255, 255); background: rgb(3, 169, 244);'></draw-canvas-data-set>
+    <canvas le width="800px" height="400px"></canvas>
+    <draw-canvas-data-set style='width: fit-content; height: fit-content; padding: 5px 15px; margin: 5px; position: absolute; left: 618px; top: 160px; opacity: 0; transition: all 0.5s ease 0s; color: rgb(255, 255, 255); background: rgb(141, 142, 143);'></draw-canvas-data-set>
 </chart>
 
-<br><h1>Export T1 (kWh) :<span id=ET1>0</span></h1>
+<br>
+<h1>Export T1 (kWh) :<span id=ET1>0</span></h1>
 <h1>Export T2 (kWh) :<span id=ET2>0</span></h1>
 <h1>Import T1 (kWh) :<span id=IT1>0</span></h1>
 <h1>Import T2 (kWh) :<span id=IT2>0</span></h1>
 
-<br><h0>Gas Time (hh:mm:ss/dd-mm-yy) :<span id=GTS>0</span></h0>
-<h1>Gas (m3) :<span id=G0>0</span></h1>
+<br>
+<h0>Gas Time (hh:mm:ss/dd-mm-yy) : Gas (m3)</h0>
+<div id="GAS">
+<h1 id="TimeGasM3">00:00:00 : 0</h1>
 
-<br><h0>Active Water usage ( l/min ) :<span id=AL>0</span></h0>
+<!-- <chartG>
+    <canvas lg width="800px" height="400px"></canvas>
+    <draw-canvas-data-setG style='width: fit-content; height: fit-content; padding: 5px 15px; margin: 5px; position: absolute; left: 618px; top: 160px; opacity: 0; transition: all 0.5s ease 0s; color: rgb(255, 255, 255); background: rgb(141, 142, 143);'></draw-canvas-data-setG>
+</chartG> -->
+
+</div>
+
+<br>
+<h0>Active Water usage ( l/min ) :<span id=AL>0</span></h0>
 <h1>Total liters (m3) :<span id=TL>0</span></h1>
 
 
