--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <h1>Totaal (W):<span id=PT>0</span> <span id=PTd3>0</span> <span id=PTd2>0</span> <span id=PTd1>0</span></h1>
 
 <chart>
-    <canvas le width="800px" height="400px"></canvas>
+    <canvas le id="E" width="800px" height="400px" tabindex = "1"></canvas>
     <draw-canvas-data-set style='width: fit-content; height: fit-content; padding: 5px 15px; margin: 5px; position: absolute; left: 618px; top: 160px; opacity: 0; transition: all 0.5s ease 0s; color: rgb(255, 255, 255); background: rgb(141, 142, 143);'></draw-canvas-data-set>
 </chart>
 
@@ -71,10 +71,10 @@
 <div id="GAS">
 <h1 id="TimeGasM3">00:00:00 : 0</h1>
 
-<!-- <chartG>
-    <canvas lg width="800px" height="400px"></canvas>
-    <draw-canvas-data-setG style='width: fit-content; height: fit-content; padding: 5px 15px; margin: 5px; position: absolute; left: 618px; top: 160px; opacity: 0; transition: all 0.5s ease 0s; color: rgb(255, 255, 255); background: rgb(141, 142, 143);'></draw-canvas-data-setG>
-</chartG> -->
+<chartG>
+    <canvas lg id="G" width="800px" height="400px" tabindex = "2"></canvas>
+    <draw-canvas-data-setG style='width: fit-content; height: fit-content; padding: 5px 15px; margin: 5px; position: absolute; left: 618px; top: 160px; opacity: 0; transition: all 0.5s ease 0s; color: rgb(255, 255, 255); background: rgb(129, 170, 210);'></draw-canvas-data-setG>
+</chartG>
 
 </div>
 
