P1 zonder IP nummer prefilled

--- a/P1.html
+++ b/P1.html
@@ -210,7 +210,7 @@ window.onload = function() {
 }
 
     Init();
-    document.getElementById('IP').value = '192.168.2.45';
+    // document.getElementById('IP').value = '192.168.2.45';
 };
 
 async function wrapper(){
