--- a/P1.min.html
+++ b/P1.min.html
@@ -178,7 +178,7 @@ window.onload = function() {
 }
 
     Init();
-    document.getElementById('IP').value = '192.168.2.45';
+    // document.getElementById('IP').value = '192.168.2.45';
 };
 
 async function wrapper(){
