x-axis y-axis variables corrected. Units scale corrected.

--- a/P1.min.html
+++ b/P1.min.html
@@ -354,6 +354,7 @@ function run(){
         Ctx.clearRect(0, 0, w, h);
         CtxG.clearRect(0,0,wg,hg);
         drawLine();
+        writeNumbers_E( {'active_power_l1_w': dataL_Total(dataL_Total.length-1) })
 
     }
 }
