--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <h1>Import T2 (kWh) :<span id=IT2>0</span></h1>
 
 <br>
-<h0>Gas Time (hh:mm:ss/dd-mm-yy) : Gas (m3)</h0>
+<h0>Gas Time (hh:mm:ss/dd-mm-yy) : Gas (m3)     Delta (liter/ x min.)    Flow ( liter/min. ) </h0>
 <div id="GAS">
 <h1 id="TimeGasM3">00:00:00 : 0</h1>
 
