--- a/index.html
+++ b/index.html
@@ -37,8 +37,35 @@ th, td {
   padding: 8px;
 }
 
+tr:first-child{background-color: #9cd1e9;}
 tr:nth-child(even){background-color: #f2f2f2}
 
+/* Tooltip container */
+.tooltip {
+  position: relative;
+  display: inline-block;
+  border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
+}
+
+/* Tooltip text */
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 120px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  padding: 5px 0;
+  border-radius: 6px;
+ 
+  /* Position the tooltip text - see examples below! */
+  position: absolute;
+  z-index: 1;
+}
+
+/* Show the tooltip text when you mouse over the tooltip container */
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+}
 
 
 
@@ -58,6 +85,10 @@ tr:nth-child(even){background-color: #f2f2f2}
     
         <input id="Start" type="button" value = "Start" onclick="run()">
         <input id="Stop" type="button" value = "Stop"  onclick="stop()">
+        <div class="tooltip"> 
+        <input id="Scan" type="button" value = "Scan"  onclick="scanIP()">
+        <span class="tooltiptext">Use IP syntax with 1 wildcard: ###.###.###.*</span>
+       </div>
 
       </div>
 
