x-as met minuten

--- a/index.html
+++ b/index.html
@@ -117,12 +117,15 @@ tr:nth-child(even){background-color: #f2f2f2}
 <script src="main.js"></script>
 
 <div>
-<label for="IP">IP:</label>
+<label for="IP">IP____P1:</label>
 
-<input type="text" id="IP" name="IP" required
+<input type="text" id="IP_P1" name="IP_P1" required
        minlength="7" maxlength="15" size="15" >
-
-    
+       <br>
+       <label for="IP W">IP_Water:</label>
+<input type="text" id="IP_WTR" name="IP_WTR" required
+       minlength="7" maxlength="15" size="15" >
+    <br><br>
         <input id="Start" type="button" value = "Start" onclick="run()">
         <input id="Stop" type="button" value = "Stop"  onclick="stop()">
         <div class="tooltip"> 
@@ -132,7 +135,7 @@ tr:nth-child(even){background-color: #f2f2f2}
 
       </div>
 
-
+<br><h0>IP no.:<span id=IP_P1></span></h0>
 <br><h0>Wifi Ssid:<span id=WifiSSID></span></h0>
 <br><h0>Wifi Strength:<span id=WifiStrength>0</span>%</h0>
 <br><h0>Meter model:<span id=MM></span></h0>
@@ -145,9 +148,13 @@ tr:nth-child(even){background-color: #f2f2f2}
 <h1>Totaal (W):<span id=PT>0</span> <span id=PTd3>0</span> <span id=PTd2>0</span> <span id=PTd1>0</span></h1>
 
 <input id="Zoom" type="button" value = "Zoom"  onclick="toggleZoom()">
-<div id="rangeValue"></div>
+
 <div class="slidecontainer">
-    <input type="range" min="1" max="100" value="100" class="slider" id="myRange">
+    <span>Timeposition</span><div id="rangeValue">10</div>
+    <input type="range" min="1" max="100" value="100" step="0.001" class="slider" id="myRange">
+    <span>Points</span><div id="pointsValue"></div>
+    <input type="range" min="10" max="6000" value="30" step="10" class="slider" id="myPoints">
+
 </div>
  
 <chart>
@@ -180,7 +187,8 @@ tr:nth-child(even){background-color: #f2f2f2}
 
 </div>
 
-<br>
+
+<br><h0>IP no.:<span id=IP_W1></span></h0><br>
 <h0>Active Water usage ( l/min ) :<span id=AL>0</span></h0>
 <h1>Total liters (m3) :<span id=TL>0</span></h1>
 
